welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:6: error: illegal start of simple expression
	for (cp <- 0 to 5);
                          ^